# coderush-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: debugging.md  styleguide.md
src/coderush_cli/: config.py  main.py  split_metrics.py  utils.py
src/coderush_cli/commands/: __init__.py  chat.py  chat_interface.py  commands.py  config.py  report.py  review.py
src/coderush_cli/github/: app_config.py  auth.py  client.py  decorators.py  github_display.py  github_format_ai.py  github_metrics.py  utils.py
src/coderush_cli/github/models/: metrics.py
src/coderush_cli/linear/: linear_display.py  linear_metrics.py
src/coderush_cli/linear/models/: metrics.py
tests/github/: test_github_metrics.py
